--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     <meta name="description" content="Portfólio do Desenvolvedor Front-End: Fábio Sousa">
     <link rel="icon" href="https://img.icons8.com/?size=100&id=vIUQ63hvBJFD&format=png&color=000000" type="image/png">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,100..1000;1,100..1000&display=swap"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,100..1000;1,100..1000&display=swap">
+    </noscript>
+
     <title>Portfólio Fábio Sousa</title>
 </head>
 
@@ -50,9 +58,9 @@
                 </nav>
 
                 <div class="redes-sociais">
-                    <a href="https://www.linkedin.com/in/fabio-sousa-fscdev/" target="_blank" aria-label="Linedin Profile"><svg
-                            xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="32" height="32"
-                            viewBox="0 0 48 48">
+                    <a href="https://www.linkedin.com/in/fabio-sousa-fscdev/" target="_blank"
+                        aria-label="Linedin Profile"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="32"
+                            height="32" viewBox="0 0 48 48">
                             <path fill="#0288D1"
                                 d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5V37z">
                             </path>
@@ -60,8 +68,9 @@
                                 d="M12 19H17V36H12zM14.485 17h-.028C12.965 17 12 15.888 12 14.499 12 13.08 12.995 12 14.514 12c1.521 0 2.458 1.08 2.486 2.499C17 15.887 16.035 17 14.485 17zM36 36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698-1.501 0-2.313 1.012-2.707 1.99C24.957 25.543 25 26.511 25 27v9h-5V19h5v2.616C25.721 20.5 26.85 19 29.738 19c3.578 0 6.261 2.25 6.261 7.274L36 36 36 36z">
                             </path>
                         </svg></i></a>
-                    <a href="https://wa.me/5585996173084" target="_blank" aria-label="Número do WhatsApp"><svg xmlns="http://www.w3.org/2000/svg"
-                            x="0px" y="0px" width="32" height="32" viewBox="0 0 48 48">
+                    <a href="https://wa.me/5585996173084" target="_blank" aria-label="Número do WhatsApp"><svg
+                            xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="32" height="32"
+                            viewBox="0 0 48 48">
                             <path fill="#fff"
                                 d="M4.868,43.303l2.694-9.835C5.9,30.59,5.026,27.324,5.027,23.979C5.032,13.514,13.548,5,24.014,5c5.079,0.002,9.845,1.979,13.43,5.566c3.584,3.588,5.558,8.356,5.556,13.428c-0.004,10.465-8.522,18.98-18.986,18.98c-0.001,0,0,0,0,0h-0.008c-3.177-0.001-6.3-0.798-9.073-2.311L4.868,43.303z">
                             </path>
@@ -78,9 +87,9 @@
                                 d="M19.268,16.045c-0.355-0.79-0.729-0.806-1.068-0.82c-0.277-0.012-0.593-0.011-0.909-0.011c-0.316,0-0.83,0.119-1.265,0.594c-0.435,0.475-1.661,1.622-1.661,3.956c0,2.334,1.7,4.59,1.937,4.906c0.237,0.316,3.282,5.259,8.104,7.161c4.007,1.58,4.823,1.266,5.693,1.187c0.87-0.079,2.807-1.147,3.202-2.255c0.395-1.108,0.395-2.057,0.277-2.255c-0.119-0.198-0.435-0.316-0.909-0.554s-2.807-1.385-3.242-1.543c-0.435-0.158-0.751-0.237-1.068,0.238c-0.316,0.474-1.225,1.543-1.502,1.859c-0.277,0.317-0.554,0.357-1.028,0.119c-0.474-0.238-2.002-0.738-3.815-2.354c-1.41-1.257-2.362-2.81-2.639-3.285c-0.277-0.474-0.03-0.731,0.208-0.968c0.213-0.213,0.474-0.554,0.712-0.831c0.237-0.277,0.316-0.475,0.474-0.791c0.158-0.317,0.079-0.594-0.04-0.831C20.612,19.329,19.69,16.983,19.268,16.045z"
                                 clip-rule="evenodd"></path>
                         </svg></a>
-                    <a href="https://github.com/fabiosousasi" target="_blank" id="github" aria-label="Github Profile"><svg
-                            xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="32" height="32"
-                            viewBox="0 0 64 64">
+                    <a href="https://github.com/fabiosousasi" target="_blank" id="github"
+                        aria-label="Github Profile"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="32"
+                            height="32" viewBox="0 0 64 64">
                             <path
                                 d="M32 6C17.641 6 6 17.641 6 32c0 12.277 8.512 22.56 19.955 25.286-.592-.141-1.179-.299-1.755-.479V50.85c0 0-.975.325-2.275.325-3.637 0-5.148-3.245-5.525-4.875-.229-.993-.827-1.934-1.469-2.509-.767-.684-1.126-.686-1.131-.92-.01-.491.658-.471.975-.471 1.625 0 2.857 1.729 3.429 2.623 1.417 2.207 2.938 2.577 3.721 2.577.975 0 1.817-.146 2.397-.426.268-1.888 1.108-3.57 2.478-4.774-6.097-1.219-10.4-4.716-10.4-10.4 0-2.928 1.175-5.619 3.133-7.792C19.333 23.641 19 22.494 19 20.625c0-1.235.086-2.751.65-4.225 0 0 3.708.026 7.205 3.338C28.469 19.268 30.196 19 32 19s3.531.268 5.145.738c3.497-3.312 7.205-3.338 7.205-3.338.567 1.474.65 2.99.65 4.225 0 2.015-.268 3.19-.432 3.697C46.466 26.475 47.6 29.124 47.6 32c0 5.684-4.303 9.181-10.4 10.4 1.628 1.43 2.6 3.513 2.6 5.85v8.557c-.576.181-1.162.338-1.755.479C49.488 54.56 58 44.277 58 32 58 17.641 46.359 6 32 6zM33.813 57.93C33.214 57.972 32.61 58 32 58 32.61 58 33.213 57.971 33.813 57.93zM37.786 57.346c-1.164.265-2.357.451-3.575.554C35.429 57.797 36.622 57.61 37.786 57.346zM32 58c-.61 0-1.214-.028-1.813-.07C30.787 57.971 31.39 58 32 58zM29.788 57.9c-1.217-.103-2.411-.289-3.574-.554C27.378 57.61 28.571 57.797 29.788 57.9z">
                             </path>
@@ -263,13 +272,15 @@
                 <h4>WhatsApp | E-mail | LinkedIn</h4>
                 <ul>
                     <li><img src="https://img.icons8.com/?size=100&id=16713&format=png&color=000000" alt="WhatsApp"
-                            title="WhatsApp" width="24px" height="24px"> <a href="https://wa.me/5585996173084" target="_blank">(85) 9 9617-3084</a></li>
+                            title="WhatsApp" width="24px" height="24px"> <a href="https://wa.me/5585996173084"
+                            target="_blank">(85) 9 9617-3084</a></li>
                     <li><img src="https://img.icons8.com/?size=100&id=X0mEIh0RyDdL&format=png&color=000000" alt="Email"
-                            title="Email" width="24px" height="24px"><a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a>
+                            title="Email" width="24px" height="24px"><a
+                            href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a>
                     </li>
-                    <li><img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="Icone Linkedin"
-                            title="LinkedIn" width="24px" height="24px"><a href="https://www.linkedin.com/in/fabio-sousa-fscdev/"
-                            target="_blank">LinkedIn</a></li>
+                    <li><img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000"
+                            alt="Icone Linkedin" title="LinkedIn" width="24px" height="24px"><a
+                            href="https://www.linkedin.com/in/fabio-sousa-fscdev/" target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
         </div>
