--- a/index.html
+++ b/index.html
@@ -233,9 +233,11 @@
                                         <img src="https://img.icons8.com/?size=100&id=21278&format=png&color=000000"
                                             alt="CSS" title="CSS" width="30px" height="30px" loading="lazy">
                                         <img src="https://img.icons8.com/?size=100&id=108784&format=png&color=000000"
-                                            alt="JavaScript" title="JavaScript" width="30px" height="30px" loading="lazy">
+                                            alt="JavaScript" title="JavaScript" width="30px" height="30px"
+                                            loading="lazy">
                                         <img src="https://img.icons8.com/?size=100&id=13682&format=png&color=000000"
-                                            alt="Cloudflare" title="Cloudflare" width="30px" height="30px" loading="lazy">
+                                            alt="Cloudflare" title="Cloudflare" width="30px" height="30px"
+                                            loading="lazy">
                                     </td>
                                 </tr>
                             </tbody>
@@ -266,12 +268,17 @@
                     <div class="grid-portfolio-titulo"><label>Projeto provedor de hospedagem</label></div>
 
                     <img class="grid-portfolio-thumb" src="assets/projeto hospedagem web.webp"
-                        alt="Imagem Projeto Hospedagem" title="Imagem Projeto Hospedagem" width="260px" height="350px" loading="lazy">
+                        alt="Imagem Projeto Hospedagem" title="Imagem Projeto Hospedagem" width="260px" height="350px"
+                        loading="lazy">
 
                     <div class="grid-portfolio-links-projetos">
-                        <a class="link-projeto" href="https://fabiosousasi.github.io/site-provedor-hospedagem/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
+                        <a class="link-projeto" href="https://fabiosousasi.github.io/site-provedor-hospedagem/"
+                            target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto"
+                                title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
 
-                        <a class="link-projeto" href="https://github.com/fabiosousasi/site-provedor-hospedagem" target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto" title="Link Projeto" width="35px" height="35px" loading="lazy"></a>
+                        <a class="link-projeto" href="https://github.com/fabiosousasi/site-provedor-hospedagem"
+                            target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto"
+                                title="Link Projeto" width="35px" height="35px" loading="lazy"></a>
                     </div>
                 </div>
 
@@ -279,25 +286,34 @@
                     <div class="grid-portfolio-titulo"><label>Projeto Cafeteria Manhattan</label></div>
 
                     <img class="grid-portfolio-thumb" src="assets/cafeteria manhattan web.webp"
-                        alt="Imagem Projeto Cafeteria Manhatatan" title="Imagem Projeto Cafeteria Manhatatan" width="260px" height="350px" loading="lazy">
+                        alt="Imagem Projeto Cafeteria Manhatatan" title="Imagem Projeto Cafeteria Manhatatan"
+                        width="260px" height="350px" loading="lazy">
 
                     <div class="grid-portfolio-links-projetos">
-                        <a class="link-projeto" href="https://fabiosousasi.github.io/site-cafeteria/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
+                        <a class="link-projeto" href="https://fabiosousasi.github.io/site-cafeteria/"
+                            target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto"
+                                title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
 
-                        <a class="link-projeto" href="https://github.com/fabiosousasi/site-cafeteria" target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto" title="Link Projeto" width="35px" height="35px" loading="lazy"></a>
+                        <a class="link-projeto" href="https://github.com/fabiosousasi/site-cafeteria"
+                            target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto"
+                                title="Link Projeto" width="35px" height="35px" loading="lazy"></a>
                     </div>
                 </div>
 
                 <div class="grid-portfolio">
                     <div class="grid-portfolio-titulo"><label>Projeto Clínica</label></div>
 
-                    <img class="grid-portfolio-thumb" src="assets/projeto clinica web.webp"
-                        alt="Imagem Projeto Clínica" title="Imagem Projeto Clínica" width="260px" height="350px" loading="lazy">
+                    <img class="grid-portfolio-thumb" src="assets/projeto clinica web.webp" alt="Imagem Projeto Clínica"
+                        title="Imagem Projeto Clínica" width="260px" height="350px" loading="lazy">
 
                     <div class="grid-portfolio-links-projetos">
-                        <a class="link-projeto" href="https://fabiosousasi.github.io/projeto-clinica/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
+                        <a class="link-projeto" href="https://fabiosousasi.github.io/projeto-clinica/"
+                            target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto"
+                                title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
 
-                        <a class="link-projeto" href="https://github.com/fabiosousasi/projeto-clinica" target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto" title="Link Projeto" width="35px" height="35px" loading="lazy"></a>
+                        <a class="link-projeto" href="https://github.com/fabiosousasi/projeto-clinica"
+                            target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto"
+                                title="Link Projeto" width="35px" height="35px" loading="lazy"></a>
                     </div>
                 </div>
             </div>
@@ -325,8 +341,8 @@
                 <h3>WhatsApp | E-mail | LinkedIn</h3>
                 <ul>
                     <li><img src="https://img.icons8.com/?size=100&id=16713&format=png&color=000000" alt="WhatsApp"
-                            title="WhatsApp" width="32px" height="32px" loading="lazy"> <a href="https://wa.me/5585996173084"
-                            target="_blank">(85) 9 9617-3084</a></li>
+                            title="WhatsApp" width="32px" height="32px" loading="lazy"> <a
+                            href="https://wa.me/5585996173084" target="_blank">(85) 9 9617-3084</a></li>
                     <li><img src="https://img.icons8.com/?size=100&id=X0mEIh0RyDdL&format=png&color=000000" alt="Email"
                             title="Email" width="32px" height="32px" loading="lazy"><a
                             href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a>
@@ -344,6 +360,18 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/portfolio-fabio-sousa/service-worker.js')
+                .then((registration) => {
+                    console.log('Service Worker registrado com sucesso:', registration);
+                })
+                .catch((error) => {
+                    console.log('Falha ao registrar o Service Worker:', error);
+                });
+        }
+    </script>
+
 </body>
 
 </html>
